adding scaffolding for 2.x operators

--- a/documentation/operators/and-then-when.html
+++ b/documentation/operators/and-then-when.html
@@ -68,6 +68,12 @@ id: and-then-when
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2.x %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS and thenDo when %}
      <figure>
       <img src="images/and_thenDo_when.png" style="width:100%;" alt="and/thenDo/when" />
