--- a/documentation/operators/backpressure.html
+++ b/documentation/operators/backpressure.html
@@ -171,6 +171,12 @@ id: backpressure
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x Flowable %}
+    <p>
+     <span style="color:#ff0000">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS controlled pausable pausableBuffered stopAndWait windowed %}
     <p>
      RxJS implements backpressure by transforming an ordinary Observable into a
