--- a/documentation/operators/buffer.html
+++ b/documentation/operators/buffer.html
@@ -398,6 +398,12 @@ Observable&lt;List&lt;Integer&gt;&gt; burstyBuffered = burstyMulticast.buffer(bu
     </ul>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x buffer %}
+    <p>
+      <span style="color:#ff0000">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS buffer bufferWithCount bufferWithTime bufferWithTimeOrCount %}
    <p>
     RxJS has four <span class="operator">Buffer</span> operators &mdash; <code>buffer</code>,
