--- a/documentation/operators/catch.html
+++ b/documentation/operators/catch.html
@@ -252,6 +252,12 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x onErrorResumeNext onErrorReturn onErrorReturnItem onExceptionResumeNext %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS catch onErrorResumeNext %}
      <p>
       RxJS implements the <span class="operator">Catch</span> operator with two distinct
