--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -103,6 +103,12 @@ id: combinelatest
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x combineLatest combineLatestDelayError withLatestFrom %}
+    <p>
+      <span style="color:#ff0000">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS combineLatest withLatestFrom %}
      <figure>
       <img src="images/combineLatest.png" style="width:100%;" alt="combineLatest" />
