--- a/documentation/operators/connect.html
+++ b/documentation/operators/connect.html
@@ -99,6 +99,12 @@ id: connect
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x connect %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS connect %}
     <figure class="variant">
      <img src="images/publishConnect.png" style="width:100%;" alt="connect" />
