--- a/documentation/operators/contains.html
+++ b/documentation/operators/contains.html
@@ -131,6 +131,11 @@ id: contains
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x any contains isEmpty %}
+    <p>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS contains findIndex indexOf isEmpty %}
      <figure>
       <img src="images/contains.png" style="width:100%;" alt="contains" />
