--- a/documentation/operators/defaultifempty.html
+++ b/documentation/operators/defaultifempty.html
@@ -79,6 +79,12 @@ id: defaultIfEmpty
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x defaultIfEmpty switchIfEmpty %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS defaultIfEmpty %}
      <figure>
       <img src="images/defaultIfEmpty.png" style="width:100%;" alt="defaultIfEmpty" />
