--- a/documentation/operators/defer.html
+++ b/documentation/operators/defer.html
@@ -110,6 +110,12 @@ id: defer
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x defer %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS case defer if switchCase %}
     <figure class="variant">
      <img src="images/defer.png" style="width:100%;" alt="defer" />
