--- a/documentation/operators/delay.html
+++ b/documentation/operators/delay.html
@@ -217,6 +217,12 @@ id: delay
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x delay delaySubscription %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS delay delaySubscription delayWithSelector %}
      <figure>
       <img src="images/delay.png" style="width:100%;" alt="delay" />
