--- a/documentation/operators/distinct.html
+++ b/documentation/operators/distinct.html
@@ -173,6 +173,12 @@ Sequence complete.</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x distinct distinctUntilChanged %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS distinct distinctUntilChanged %}
      <figure>
       <img src="images/distinct.png" style="width:100%;" alt="distinct" />
