--- a/documentation/operators/do.html
+++ b/documentation/operators/do.html
@@ -309,6 +309,12 @@ Error: Item exceeds maximum value</pre></div>
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x doAfterTerminate doOnComplete doOnDispose doOnEach doOnError doOnLifecycle doOnNext doOnSubscribe doOnTerminate onTerminateDetach %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS do doOnCompleted doOnError doOnNext finally tap tapOnCompleted tapOnError tapOnNext %}
     <figure class="variant">
      <img src="images/do.png" style="width:100%;" alt="do" />
