--- a/documentation/operators/elementat.html
+++ b/documentation/operators/elementat.html
@@ -120,6 +120,12 @@ id: elementAt
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x elementAt %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS elementAt %}
      <figure>
       <img src="images/elementAt.png" style="width:100%;" alt="elementAt" />
