--- a/documentation/operators/filter.html
+++ b/documentation/operators/filter.html
@@ -147,6 +147,12 @@ Sequence complete.</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x filter ofType %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS filter where %}
      <figure>
       <img src="images/filter.png" style="width:100%;" alt="filter" />
