--- a/documentation/operators/first.html
+++ b/documentation/operators/first.html
@@ -574,6 +574,12 @@ Sequence complete.</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x blockingFirst blockingSingle first firstElement single singleElement takeFirst %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS find findIndex first single %}
      <figure>
       <img src="images/firstN.png" style="width:100%;" alt="first" />
