--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -254,6 +254,12 @@ Sequence complete</pre></div>
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x fromArray fromCallable fromFuture fromIterable fromPublisher %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS from fromCallback fromEvent fromEventPattern fromNodeCallback fromPromise of ofArrayChanges ofObjectChanges ofWithScheduler pairs %}
     <p>
      There are several, specialized <span class="operator">From</span> variants in RxJS:
