--- a/documentation/operators/groupby.html
+++ b/documentation/operators/groupby.html
@@ -175,6 +175,12 @@ Observable.range(1,5)
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x groupBy %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS groupBy groupByUntil %}
     <figure class="variant">
      <img src="images/groupBy.png" style="width:100%;" alt="groupBy" />
