--- a/documentation/operators/ignoreelements.html
+++ b/documentation/operators/ignoreelements.html
@@ -78,6 +78,12 @@ id: ignoreElements
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x ignoreElements %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS ignoreElements %}
      <figure>
       <img src="images/ignoreElements.png" style="width:100%;" alt="ignoreElements" />
