--- a/documentation/operators/last.html
+++ b/documentation/operators/last.html
@@ -299,6 +299,12 @@ Sequence complete.</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x blockingLast last lastElement %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS last %}
      <figure>
       <img src="images/last.p.png" style="width:100%;" alt="last" />
