--- a/documentation/operators/map.html
+++ b/documentation/operators/map.html
@@ -146,6 +146,12 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x cast map %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS map pluck select %}
      <figure>
       <img src="images/map.i.png" style="width:100%;" alt="map" />
