--- a/documentation/operators/materialize-dematerialize.html
+++ b/documentation/operators/materialize-dematerialize.html
@@ -148,6 +148,12 @@ Sequence complete</pre></div>
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x dematerialize materialize %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS dematerialize %}
     <figure class="variant">
      <img src="images/dematerialize.png" style="width:100%;" alt="dematerialize" />
