--- a/documentation/operators/merge.html
+++ b/documentation/operators/merge.html
@@ -318,6 +318,12 @@ Sequence complete.</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x merge mergeArray mergeArrayDelayError mergeDelayError mergeWith %}
+     <p>
+       <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS merge mergeAll mergeDelayError %}
      <figure>
       <img src="images/merge.png" style="width:100%;" alt="merge" />
