--- a/documentation/operators/observeon.html
+++ b/documentation/operators/observeon.html
@@ -109,6 +109,12 @@ id: observeOn
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x observeOn %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS observeOn %}
     <figure class="variant">
      <img src="images/observeOn.png" style="width:100%;" alt="observeOn" />
