--- a/documentation/operators/range.html
+++ b/documentation/operators/range.html
@@ -88,6 +88,12 @@ def myObservable = Observable.range(5, 3);</pre></div>
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x intervalRange range %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS range %}
     <figure class="variant">
      <img src="images/range.png" style="width:100%;" alt="range" />
