--- a/documentation/operators/reduce.html
+++ b/documentation/operators/reduce.html
@@ -190,6 +190,12 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x collect collectInto reduce reduceWith %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS reduce %}
      <figure>
       <img src="images/reduceSeed.png" style="width:100%;" alt="reduce" />
