--- a/documentation/operators/sample.html
+++ b/documentation/operators/sample.html
@@ -207,6 +207,12 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x sample throttleFirst throttleLast %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS sample throttleFirst %}
      <p>
       RxJS implements this operator with two variants of <code>sample</code>.
