--- a/documentation/operators/scan.html
+++ b/documentation/operators/scan.html
@@ -158,6 +158,12 @@ Sequence complete.</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x scan %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS expand scan %}
      <figure>
       <img src="images/scan.png" style="width:100%;" alt="scan" />
