--- a/documentation/operators/skip.html
+++ b/documentation/operators/skip.html
@@ -131,6 +131,12 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x skip %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS skip skipUntilWithTime %}
      <figure>
       <img src="images/skip.png" style="width:100%;" alt="skip" />
