--- a/documentation/operators/skiplast.html
+++ b/documentation/operators/skiplast.html
@@ -126,6 +126,12 @@ id: skipLast
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x skipLast %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS skipLast skipLastWithTime %}
      <figure>
       <img src="images/skipLast.png" style="width:100%;" alt="skipLast" />
