--- a/documentation/operators/skipuntil.html
+++ b/documentation/operators/skipuntil.html
@@ -80,6 +80,12 @@ id: skipUntil
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x skipUntil %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS skipUntil %}
      <figure>
       <img src="images/skipUntil.png" style="width:100%;" alt="skipUntil" />
