--- a/documentation/operators/skipwhile.html
+++ b/documentation/operators/skipwhile.html
@@ -101,6 +101,12 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x skipWhile %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS skipWhile %}
      <figure>
       <img src="images/skipWhile.png" style="width:100%;" alt="skipWhile" />
