--- a/documentation/operators/startwith.html
+++ b/documentation/operators/startwith.html
@@ -132,6 +132,12 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x startWith %}
+     <p>
+       <span style="color:#f00">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS startWith %}
      <figure>
       <img src="images/startWith.png" style="width:100%;" alt="startWith" />
