--- a/documentation/operators/subscribe.html
+++ b/documentation/operators/subscribe.html
@@ -220,6 +220,12 @@ id: subscribe
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x blockingForEach blockingSubscribe forEachWhile safeSubscribe subscribe %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS forEach subscribe subscribeOnCompleted subscribeOnError subscribeOnNext %}
     <p>
      In RxJS, you can subscribe to an Observable in two ways:
