--- a/documentation/operators/subscribeon.html
+++ b/documentation/operators/subscribeon.html
@@ -114,6 +114,12 @@ id: subscribeOn
     </ul>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x subscribeOn unsubscribeOn %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS subscribeOn %}
     <figure class="variant">
      <img src="images/subscribeOn.png" style="width:100%;" alt="subscribeOn" />
