--- a/documentation/operators/take.html
+++ b/documentation/operators/take.html
@@ -166,6 +166,12 @@ Sequence complete.</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x take %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS take takeUntilWithTime %}
      <figure>
       <img src="images/take.png" style="width:100%;" alt="take" />
