--- a/documentation/operators/takelast.html
+++ b/documentation/operators/takelast.html
@@ -198,6 +198,12 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x takeLast %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS takeLast takeLastBuffer takeLastBufferWithTime takeLastWithTime %}
      <figure>
       <img src="images/takeLast.n.png" style="width:100%;" alt="takeLast" />
