--- a/documentation/operators/takeuntil.html
+++ b/documentation/operators/takeuntil.html
@@ -109,6 +109,12 @@ id: takeUntil
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x takeUntil %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS takeUntil %}
      <figure>
       <img src="images/takeUntil.png" style="width:100%;" alt="takeUntil" />
