--- a/documentation/operators/takewhile.html
+++ b/documentation/operators/takewhile.html
@@ -102,6 +102,12 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x takeWhile %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS takeWhile %}
      <figure>
       <img src="images/takeWhile.png" style="width:100%;" alt="takeWhile" />
