--- a/documentation/operators/timeinterval.html
+++ b/documentation/operators/timeinterval.html
@@ -86,6 +86,12 @@ id: timeInterval
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x timeInterval %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS timeInterval %}
      <figure>
       <img src="images/timeInterval.png" style="width:100%;" alt="timeInterval" />
