--- a/documentation/operators/timeout.html
+++ b/documentation/operators/timeout.html
@@ -240,6 +240,12 @@ id: timeout
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x timeout %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS timeout timeoutWithSelector %}
      <p>
       RxJS implements this operator as <code>timeout</code> and <code>timeoutWithSelector</code>:
