--- a/documentation/operators/timestamp.html
+++ b/documentation/operators/timestamp.html
@@ -97,6 +97,12 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x timestamp %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS timestamp %}
      <figure>
       <img src="images/timestamp.png" style="width:100%;" alt="timestamp" />
