--- a/documentation/operators/to.html
+++ b/documentation/operators/to.html
@@ -367,6 +367,12 @@ Sequence complete</pre></div>
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x blockingIterable blockingLatest blockingMostRecent blockingNext sorted to toFuture toList toMap toMultimap toSortedList %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS toArray toMap toSet %}
     <figure class="variant">
      <img src="images/toArray.png" style="width:100%;" alt="toArray" />
