--- a/documentation/operators/using.html
+++ b/documentation/operators/using.html
@@ -91,6 +91,12 @@ id: using
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x using %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS using %}
      <figure>
       <img src="images/using.js.png" style="width:100%;" alt="using" />
