--- a/documentation/operators/window.html
+++ b/documentation/operators/window.html
@@ -467,6 +467,12 @@ Observable&lt;Observable&lt;Integer&gt;&gt; burstyWindowed = bursty.window(5);</
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x window %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS window windowWithCount windowWithTime windowWithTimeOrCount %}
      <h4><code>window(windowClosingSelector)</code></h4>
      <figure>
