--- a/documentation/operators/concat.html
+++ b/documentation/operators/concat.html
@@ -167,6 +167,12 @@ Sequence complete</pre></div>
      </ul>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x concat concatArray concatArrayDelayError concatArrayEager concatDelayError concatEager concatWith %}
+    <p>
+      <span style="color:#ff0000">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS concat concatAll %}
      <p>
       RxJS implements this operator as <code>concat</code> and <code>concatAll</code>.
