--- a/documentation/operators/create.html
+++ b/documentation/operators/create.html
@@ -148,6 +148,12 @@ Sequence complete.</pre></div>
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x create generate unsafeCreate %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS create createWithDisposable generate generateWithAbsoluteTime generateWithRelativeTime %}
     <figure class="variant">
      <img src="images/create.png" style="width:100%;" alt="create" />
