--- a/documentation/operators/debounce.html
+++ b/documentation/operators/debounce.html
@@ -131,6 +131,12 @@ id: debounce
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x debounce throttleWithTimeout %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS debounce debounceWithSelector throttleWithTimeout %}
      <figure>
       <img src="images/debounce.png" style="width:100%;" alt="debounce" />
