--- a/documentation/operators/flatmap.html
+++ b/documentation/operators/flatmap.html
@@ -289,6 +289,12 @@ Sequence complete</pre></div>
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x concatMap concatMapDelayError concatMapEager concatMapEagerDelayError concatMapIterable flatMap flatMapIterable switchMap switchMapDelayError %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS concatMap concatMapObserver flatMap flatMapFirst flatMapLatest flatMapObserver flatMapWithMaxConcurrency for forIn manySelect selectConcat selectConcatObserver selectMany selectManyObserver selectSwitch selectSwitchFirst selectWithMatchConcurrent %}
 <!--
  TODO: flatMapFirst, flatMapWithMaxConcurrency, selectSwitchFirst, selectWithMaxConcurrent
