--- a/documentation/operators/interval.html
+++ b/documentation/operators/interval.html
@@ -116,6 +116,12 @@ id: interval
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x interval %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS interval %}
     <figure class="variant">
      <img src="images/interval.png" style="width:100%;" alt="interval" />
