--- a/documentation/operators/join.html
+++ b/documentation/operators/join.html
@@ -156,6 +156,12 @@ id: join
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x join groupJoin %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS join groupJoin %}
     <figure class="variant">
      <img src="images/join_.png" style="width:100%;" alt="join" />
