--- a/documentation/operators/just.html
+++ b/documentation/operators/just.html
@@ -122,6 +122,12 @@ Sequence complete.</pre></div>
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x just %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS just return %}
     <figure class="variant">
      <img src="images/just.png" style="width:100%;" alt="just" />
