--- a/documentation/operators/publish.html
+++ b/documentation/operators/publish.html
@@ -95,6 +95,12 @@ id: publish
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x publish %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS let letBind multicast publish publishLast publishValue %}
     <figure class="variant">
      <img src="images/publishConnect.f.png" style="width:100%;" alt="publish" />
