--- a/documentation/operators/refcount.html
+++ b/documentation/operators/refcount.html
@@ -93,6 +93,12 @@ id: refcount
     </ul>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x share %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS refCount share shareValue %}
     <figure class="variant">
      <img src="images/publishRefCount.png" style="width:100%;" alt="refCount" />
