--- a/documentation/operators/repeat.html
+++ b/documentation/operators/repeat.html
@@ -169,6 +169,12 @@ id: repeat
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x repeat repeatUntil repeatWhen %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS doWhile repeat while %}
     <figure class="variant">
      <img src="images/repeat.png" style="width:100%;" alt="repeat" />
