--- a/documentation/operators/retry.html
+++ b/documentation/operators/retry.html
@@ -183,6 +183,12 @@ subscribing</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x retry retryUntil retryWhen %}
+     <p>
+       <span style="color:#f00">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS retry %}
      <p>
       RxJS implements this operator as <code>retry</code>.
