--- a/documentation/operators/serialize.html
+++ b/documentation/operators/serialize.html
@@ -67,6 +67,12 @@ id: serialize
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x serialize %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS %}
     <p>
      <span style="color:#f00">TBD</span>
