--- a/documentation/operators/start.html
+++ b/documentation/operators/start.html
@@ -295,6 +295,12 @@ id: start
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x fromCallable %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS start startAsync toAsync %}
     <figure class="variant">
      <img src="images/start.png" style="width:100%;" alt="start" />
