--- a/documentation/operators/switch.html
+++ b/documentation/operators/switch.html
@@ -77,6 +77,12 @@ id: switch
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x switchOnNext switchOnNextDelayError %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS switch %}
     <figure class="variant">
      <img src="images/switch.png" style="width:100%;" alt="switch" />
