--- a/documentation/operators/timer.html
+++ b/documentation/operators/timer.html
@@ -82,6 +82,12 @@ id: timer
     </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x timer %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS timer %}
     <p>In RxJS there are two versions of the <code>timer</code> operator.</p>
     <figure class="variant">
