--- a/documentation/operators/zip.html
+++ b/documentation/operators/zip.html
@@ -150,6 +150,12 @@ Sequence complete</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxJava&nbsp;2․x zip zipArray zipIterable zipWith %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
   {% lang_operator RxJS forkJoin zip zipArray %}
      <p>
       RxJS implements this operator as <code>zip</code> and <code>zipArray</code>.
