Added swift example for the Observable.just method

--- a/documentation/operators/just.html
+++ b/documentation/operators/just.html
@@ -225,9 +225,42 @@ Complete!
   {% endlang_operator %}
 
   {% lang_operator RxSwift just sequenceOf %}
+<div class="panel-body">
     <p>
-     <span style="color:#f00">TBD</span>
+      In Swift, this is implemented using the <code>Observable.just</code> class method.
     </p>
+    <p>
+      The parameter, whether a tuple (i.e. <code>(1, 2, 3)</code>) or an array (i.e. <code>[1,2,3]</code>) is produced as one emission.
+    </p>
+
+    <h4>Sample Code</h4>
+    <div class="code swift">
+<pre>let source = Observable.just(1, 2, 3)
+
+source.subscribe {
+    print($0)
+}
+
+let source2 = Observable.just([1,2,3])
+
+source2.subscribe {
+    print($0)
+}
+</pre>
+    </div>
+    <div class="output">
+<pre>next((1, 2, 3))
+completed
+next([1, 2, 3])
+completed
+
+</pre>
+    </div>
+    <p>
+      The difference between this and <code>Observable.from</code> is that the latter's parameter is an array or a sequence, and emits each of its element as one emission.
+    </p>
+
+</div>
   {% endlang_operator %}
 
 </div>
