--- a/documentation/operators/flatmap.html
+++ b/documentation/operators/flatmap.html
@@ -640,14 +640,34 @@ Complete!
 <h4>Sample Code</h4>
 <div class="code php">
     <pre>
-//from https://github.com/ReactiveX/RxPHP/blob/master/demo/concat/flatMapTo.php
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/flatmap/flatMapTo.php
 
+$loop      = React\EventLoop\Factory::create();
+$scheduler = new Rx\Scheduler\EventLoopScheduler($loop);
+
+$observable = Rx\Observable::range(1, 5);
+
+$selectManyObservable = $observable->flatMapTo(\Rx\Observable::range(0,2));
+
+$disposable = $selectManyObservable->subscribe($stdoutObserver, $scheduler);
+
+$loop->run();
 
    </pre>
 </div>
 <div class="output">
     <pre>
-
+Next value: 0
+Next value: 1
+Next value: 0
+Next value: 1
+Next value: 0
+Next value: 1
+Next value: 0
+Next value: 1
+Next value: 0
+Next value: 1
+Complete!
     </pre>
 </div>
     </figcaption>
