Fix typo in subscribe.html

--- a/documentation/operators/subscribe.html
+++ b/documentation/operators/subscribe.html
@@ -19,7 +19,7 @@ id: subscribe
   error or completed notifications from the Observable, it must first subscribe to that Observable with
   this operator.
  </p><p>
-  A typical implementaiton of the <span class="operator">Subscribe</span> operator may accept one to three
+  A typical implementation of the <span class="operator">Subscribe</span> operator may accept one to three
   methods (which then constitute the observer), or it may accept an object (sometimes called an
   <code>Observer</code> or <code>Subscriber</code>) that implements the interface which includes those three
   methods:
